# universal_transcoder

./: .gitignore  CONTRIBUTORS.md  LICENSE  pyproject.toml  requirements.txt
paper/: ex1_5OAto704.py  ex2_704to5OA.py  ex3_502to301irr.py  ex4_ObjectTo50.py
paper/plots_paper/: panningPlots.py
src/universal_transcoder/auxiliars/: conventions.py  get_cloud_points.py  get_decoder_matrices.py  get_input_channels.py  get_left_right_pairs.py  my_coordinates.py
src/universal_transcoder/calculations/: cost_function.py  energy_intensity.py
src/universal_transcoder/encoders/: ambisonics_encoder.py
src/universal_transcoder/plots_and_logs/: e_i_plots.py  import_allrad_dec.py  p_v_plots.py
tests/: test_ambisonics_encoder.py  test_decoder_matrices.py  test_e_i_p_v.py  test_vbap_encoder.py
universal_transcoder/auxiliars/: get_cloud_points.py  typing.py
universal_transcoder/calculations/: cost_function.py  optimization.py  pressure_velocity.py  set_up_system.py
universal_transcoder/encoders/: vbap_encoder.py
universal_transcoder/plots_and_logs/: all_plots.py  common_plots_functions.py  e_i_plots.py  p_v_plots.py  plot_utils.py  speakers_plots.py  write_logs.py
universal_transcoder/tfg_james/: constants.py  example_transcodings.py  transcode_from_config_file.py
universal_transcoder/tfg_james/config_files/: config.yaml  surround_layouts.yaml
