[project]
name = "universal_transcoder"
description = "This code consists of a universal transcoder tool. It generates a psychoacoustically motivated transcoding matrix to transform from any input format to any other given format or speaker layout."
version = "2023.1000"
authors = [
    { name = "Amaia Sagasti" },
    { name = "Davide Scaini" },
    { name = "Daniel Arteaga" },
]
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.8",
    "jax>=0.4.17",
    "jaxlib>=0.4.17",
    "pyfar>=0.7.3",
    "scipy>=1.10",
    "xarray>=2023.1",
    "cartopy>=0.25",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]